kubernetes/apps/media/audiobookshelf/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app audiobookshelf
  namespace: &namespace media
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Audiobookshelf
    gethomepage.dev/group: Media
    gethomepage.dev/icon: audiobookshelf.svg
    gethomepage.dev/description: Audiobooks and podcasts · External
    kustomize.toolkit.fluxcd.io/substitute: "true"
spec:
  hostnames:
    - "audiobookshelf.${SECRET_DOMAIN}"
  parentRefs:
    - name: external
      namespace: kube-system
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: *app
          port: 80
          namespace: *namespace
