kubernetes/apps/media/audiobookshelf/app/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: &name audiobookshelf
  namespace: &namespace media
  annotations:
    external-dns.alpha.kubernetes.io/target: external.${SECRET_DOMAIN}
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`audiobookshelf.${SECRET_DOMAIN}`)
      kind: Rule
      middlewares:
        - name: authentik-outpost
          namespace: *namespace
      services:
        - name: *name
          port: 80
    - match: Host(`abs.${SECRET_DOMAIN}`)
      kind: Rule
      middlewares:
        - name: authentik-outpost
          namespace: *namespace
      services:
        - name: *name
          port: 80
  tls:
    secretName: "${SECRET_DOMAIN/./-}-tls"
